--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Fist Page</title>
+  <title>Home Page -- Change to be push to GitHub</title>
 </head>
 <body>
   
